shop search stuff

--- a/web/index.html
+++ b/web/index.html
@@ -10,8 +10,8 @@
 <body class="loginPage">
 <div class="flexColumn" style="height: 100vh">
     <div class="flexColumn loginBox">
-        <input class="loginItem loginInput" placeholder="Login">
-        <input type="password" class="loginItem loginInput" placeholder="Password">
+        <input class="loginItem bigInput" placeholder="Login">
+        <input type="password" class="loginItem bigInput" placeholder="Password">
         <a class="loginItem button buttonUnpressed" href="index.html">Log in</a>
         <a class="loginItem button buttonUnpressed" href="register.html">Register</a>
     </div>
