--- a/web/register.html
+++ b/web/register.html
@@ -11,12 +11,12 @@
 <div class="flexColumn" style="height: 100vh">
     <div class="flexColumn loginBox">
         <a class="backLink" href="index.html">< back</a>
-        <input class="loginItem loginInput" placeholder="Login">
-        <input type="password" class="loginItem loginInput" placeholder="Password">
-        <input type="password" class="loginItem loginInput" placeholder="Confirm password">
-        <input type="email" class="loginItem loginInput" placeholder="Email">
-        <input class="loginItem loginInput" placeholder="First name">
-        <input class="loginItem loginInput" placeholder="Last name">
+        <input class="loginItem bigInput" placeholder="Login">
+        <input type="password" class="loginItem bigInput" placeholder="Password">
+        <input type="password" class="loginItem bigInput" placeholder="Confirm password">
+        <input type="email" class="loginItem bigInput" placeholder="Email">
+        <input class="loginItem bigInput" placeholder="First name">
+        <input class="loginItem bigInput" placeholder="Last name">
         <div class="checkBoxFlex">
             <div class="registerCheckbox">
                 <input id="customerRadio" type="radio" name="clientType" class="loginItem checkbox">
