--- a/web/scientistsMain.html
+++ b/web/scientistsMain.html
@@ -9,10 +9,11 @@
 </head>
 <body>
 <div class="scientistsGrid">
-    <div class="grid--employeeInfo"> Name Surname <br> Level: x</div>
-    <div class="grid--notifications">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-            <path d="M 16 7
+    <div class="flexRow grid--empInfoNotifications">
+        <div class="empInfo"> Name Surname <br> Level: x</div>
+        <div class="empNotifications">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="50px">
+                <path d="M 16 7
             a 5.38 5.38 0 0 0 -4.46 -4.85
             C 11.6 1.46 11.53 0 10 0
             S 8.4 1.46 8.46 2.15
@@ -27,12 +28,13 @@
             a 3 3 0 0 0 3 -3
             H 7
             a 3 3 0 0 0 3 3 z"></path>
-            <g class="hidden">
-                <circle fill="red" cx="15" cy="5" r="4"></circle>
-                <text id="notificationsNumber" fill="white" x="13.5" y="7" font-size="6">9</text>
-                <!-- x=11.8 for two-digit numbers -->
-            </g>
-        </svg>
+                <g class="hidden">
+                    <circle fill="red" cx="15" cy="5" r="4"></circle>
+                    <text id="notificationsNumber" fill="white" x="13.5" y="7" font-size="6">9</text>
+                    <!-- x=11.8 for two-digit numbers -->
+                </g>
+            </svg>
+        </div>
     </div>
     <button class="grid--expButton gridButton button buttonPressed">Experiments</button>
     <button class="grid--artButton gridButton button buttonUnpressed">Articles</button>
