administrators menu, multiple css files, fixes

--- a/web/securityMain.html
+++ b/web/securityMain.html
@@ -4,14 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/security.css">
     <title>MNU</title>
 </head>
 <body>
 <div class="securityGrid">
     <div class="empInfo grid--empInfoNotifications"> Name Surname <br> Level: x</div>
-    <button class="grid--changeButton gridButton button buttonUnpressed">Change <br> equipment</button>
-    <button class="grid--reportButton gridButton button buttonUnpressed">Report on <br> a confiscated weapon</button>
+    <div class="securityFlexRow grid--securityButtons">
+        <a class="changeButton gridButton button buttonUnpressed">Change <br> equipment</a>
+        <a class="reportButton gridButton button buttonUnpressed">Report on <br> a confiscated weapon</a>
+    </div>
 </div>
 </body>
 </html>
