managers more icons

--- a/web/managersMain.html
+++ b/web/managersMain.html
@@ -34,7 +34,8 @@
                     <!-- x=11.8 for two-digit numbers -->
                 </g>
             </svg>
-            
+            <img alt="Clients list" class="clientsListButton" src="images/human_list_icon.png">
+            <img alt="Prawns list" class="prawnsListButton" src="images/alien_list_icon.png">
         </div>
     </div>
     <div class="grid--managerButtons flexColumn">
