--- a/web/administratorsEmployees.html
+++ b/web/administratorsEmployees.html
@@ -8,8 +8,9 @@
     <title>MNU</title>
 </head>
 <body>
-<div class="administratorsGrid">
+<div class="managersGrid">
     <div class="flexRow grid--adminHeader">
+        <img alt="back" src="images/back.png" class="backButton">
         <div class="empInfo"> Name Surname <br> Level: x</div>
         <div class="empNotifications">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="50px">
@@ -36,14 +37,22 @@
             </svg>
         </div>
     </div>
-    <a class="flexColumn administratorsMenuButton grid--districtButton gridButton button buttonUnpressed">District</a>
-    <a class="flexColumn administratorsMenuButton grid--expArtButton gridButton button buttonUnpressed">Experiments & Articles</a>
-    <a class="flexColumn administratorsMenuButton grid--clientManufacturersButton gridButton button buttonUnpressed">Clients & Manufacturers</a>
-    <a class="flexColumn administratorsMenuButton grid--empButton gridButton button buttonUnpressed">Employees</a>
-    <a class="flexColumn administratorsMenuButton grid--prawnVacButton gridButton button buttonUnpressed">Prawn vacancies</a>
-    <a class="flexColumn administratorsMenuButton grid--synthConfWeaponsButton gridButton button buttonUnpressed">Synthesized & confiscated weapons</a>
-    <a class="flexColumn administratorsMenuButton grid--prawnRegisterButton gridButton button buttonUnpressed">Prawn registration</a>
-    <a class="flexColumn administratorsMenuButton grid--prawnJobApplicationsButton gridButton button buttonUnpressed">Prawns' job applications</a>
+    <div class="grid--adminEmployeesTable">
+        <table>
+            <thead>
+
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
+    </div>
+    <br> <br> <br> <br>
+    <img class="buttonUnpressed roundButton" src="images/dollar.png" width="50px">
+    <img class="buttonUnpressed roundButton" src="images/magnifier.png" width="50px">
+    <img class="buttonUnpressed roundButton" src="images/edit.svg" width="50px">
+    <img class="buttonUnpressed roundButton" src="images/plus.png" width="50px">
+    <img class="buttonUnpressed roundButton" src="images/xMark.png" width="50px">
 </div>
 </body>
 </html>
