--- a/web/administratorsEmployees.html
+++ b/web/administratorsEmployees.html
@@ -10,7 +10,7 @@
 <body>
 <div class="managersGrid">
     <div class="flexRow grid--adminHeader">
-        <img alt="back" src="images/back.png" class="backButton">
+        <img alt="back" src="images/back.png" class="backButton roundButton buttonUnpressed">
         <div class="empInfo"> Name Surname <br> Level: x</div>
         <div class="empNotifications">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="50px">
