BEM naming convention

--- a/web/administratorsEmployees.html
+++ b/web/administratorsEmployees.html
@@ -8,11 +8,11 @@
     <title>MNU</title>
 </head>
 <body>
-<div class="adminEmployeesGrid">
-    <div class="flexRow grid--adminHeader">
-        <img alt="back" src="images/back.png" class="icon backButton roundButton buttonUnpressed">
-        <div class="empInfo"> Name Surname <br> Level: x</div>
-        <div class="empNotifications">
+<div class="admin-employees-grid">
+    <div class="flex-row admin-header">
+        <img alt="back" src="images/back.png" class="icon back-button round-button button_unpressed">
+        <div class="employee-info"> Name Surname <br> Level: x</div>
+        <div class="employee-notifications">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="50px">
                 <path d="M 16 7
             a 5.38 5.38 0 0 0 -4.46 -4.85
@@ -67,10 +67,10 @@
         </table>
     </div>
     <div class="admin-employees-grid__buttons">
-        <img alt="Add employee" id="add-button" class="buttonPressed roundButton icon" src="images/plus.png">
-        <img alt="Edit employees" id="edit-button" class="buttonUnpressed roundButton icon" src="images/edit.svg">
-        <img alt="Find employees" id="find-button" class="buttonUnpressed roundButton icon" src="images/magnifier.svg">
-        <img alt="Cash Rewards" id="reward-button" class="buttonUnpressed roundButton icon" src="images/dollar.png">
+        <img alt="Add employee" id="add-button" class="button_pressed round-button icon" src="images/plus.png">
+        <img alt="Edit employees" id="edit-button" class="button_unpressed round-button icon" src="images/edit.svg">
+        <img alt="Find employees" id="find-button" class="button_unpressed round-button icon" src="images/magnifier.svg">
+        <img alt="Cash Rewards" id="reward-button" class="button_unpressed round-button icon" src="images/dollar.png">
     </div>
     <div class="admin-employees-grid__inputs">
         <div class="admin-employees-grid__inputs_add add-employees-inputs-grid">
@@ -97,7 +97,7 @@
                     Administrator
                 </label>
             </div>
-            <button class="button buttonUnpressed add-employees-inputs-grid__button">Add employee</button>
+            <button class="button button_unpressed add-employees-inputs-grid__button">Add employee</button>
         </div>
         <div class="admin-employees-grid__inputs_edit">
 
