--- a/web/administratorsMain.html
+++ b/web/administratorsMain.html
@@ -8,10 +8,10 @@
     <title>MNU</title>
 </head>
 <body>
-<div class="administratorsGrid">
-    <div class="flexRow grid--adminHeader">
-        <div class="empInfo"> Name Surname <br> Level: x</div>
-        <div class="empNotifications">
+<div class="administrators-menu-grid">
+    <div class="flex-row admin-header">
+        <div class="employee-info"> Name Surname <br> Level: x</div>
+        <div class="employee-notifications">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="50px">
                 <path d="M 16 7
             a 5.38 5.38 0 0 0 -4.46 -4.85
@@ -36,14 +36,14 @@
             </svg>
         </div>
     </div>
-    <a class="flexColumn administratorsMenuButton grid--districtButton gridButton button buttonUnpressed">District</a>
-    <a class="flexColumn administratorsMenuButton grid--expArtButton gridButton button buttonUnpressed">Experiments & Articles</a>
-    <a class="flexColumn administratorsMenuButton grid--clientManufacturersButton gridButton button buttonUnpressed">Clients & Manufacturers</a>
-    <a class="flexColumn administratorsMenuButton grid--empButton gridButton button buttonUnpressed">Employees</a>
-    <a class="flexColumn administratorsMenuButton grid--prawnVacButton gridButton button buttonUnpressed">Prawn vacancies</a>
-    <a class="flexColumn administratorsMenuButton grid--synthConfWeaponsButton gridButton button buttonUnpressed">Synthesized & confiscated weapons</a>
-    <a class="flexColumn administratorsMenuButton grid--prawnRegisterButton gridButton button buttonUnpressed">Prawn registration</a>
-    <a class="flexColumn administratorsMenuButton grid--prawnJobApplicationsButton gridButton button buttonUnpressed">Prawns' job applications</a>
+    <a class="flex-column administrators-menu-grid__district grid-button button button_unpressed">District</a>
+    <a class="flex-column administrators-menu-grid__experiments-articles grid-button button button_unpressed">Experiments & Articles</a>
+    <a class="flex-column administrators-menu-grid__clients-manufacturers grid-button button button_unpressed">Clients & Manufacturers</a>
+    <a class="flex-column administrators-menu-grid__employees grid-button button button_unpressed">Employees</a>
+    <a class="flex-column administrators-menu-grid__prawn-vacancies grid-button button button_unpressed">Prawn vacancies</a>
+    <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button button_unpressed">Synthesized & confiscated weapons</a>
+    <a class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawn registration</a>
+    <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button button_unpressed">Prawns' job applications</a>
 </div>
 </body>
 </html>
