--- a/web/index.html
+++ b/web/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" type="text/css" href="css/auth.css">
     <title>MNU</title>
 </head>
-<body class="loginPage">
-<div class="flexColumn" style="height: 100vh">
-    <div class="flexColumn loginBox">
-        <input class="loginItem bigInput" placeholder="Login">
-        <input type="password" class="loginItem bigInput" placeholder="Password">
-        <a class="loginItem button buttonUnpressed" href="index.html">Log in</a>
-        <a class="loginItem button buttonUnpressed" href="register.html">Register</a>
+<body class="login-page">
+<div class="flex-column" style="height: 100vh">
+    <div class="flex-column login-page__box">
+        <input class="login-page__item input_big" placeholder="Login">
+        <input type="password" class="login-page__item input_big" placeholder="Password">
+        <a class="login-page__item button button_unpressed" href="index.html">Log in</a>
+        <a class="login-page__item button button_unpressed" href="register.html">Register</a>
     </div>
 </div>
 </body>
