--- a/web/register.html
+++ b/web/register.html
@@ -7,27 +7,27 @@
     <link rel="stylesheet" type="text/css" href="css/auth.css">
     <title>MNU</title>
 </head>
-<body class="loginPage">
-<div class="flexColumn" style="height: 100vh">
-    <div class="flexColumn loginBox">
-        <a class="backLink" href="index.html">< back</a>
-        <input class="loginItem bigInput" placeholder="Login">
-        <input type="password" class="loginItem bigInput" placeholder="Password">
-        <input type="password" class="loginItem bigInput" placeholder="Confirm password">
-        <input type="email" class="loginItem bigInput" placeholder="Email">
-        <input class="loginItem bigInput" placeholder="First name">
-        <input class="loginItem bigInput" placeholder="Last name">
-        <div class="checkBoxFlex">
-            <div class="registerCheckbox">
-                <input id="customerRadio" type="radio" name="clientType" class="loginItem checkbox">
-                <label class="checkboxLabel" for="customerRadio">Customer</label>
+<body class="login-page">
+<div class="flex-column" style="height: 100vh">
+    <div class="flex-column login-page__box">
+        <a class="login-page__back-link" href="index.html">< back</a>
+        <input class="login-page__item input_big" placeholder="Login">
+        <input type="password" class="login-page__item input_big" placeholder="Password">
+        <input type="password" class="login-page__item input_big" placeholder="Confirm password">
+        <input type="email" class="login-page__item input_big" placeholder="Email">
+        <input class="login-page__item input_big" placeholder="First name">
+        <input class="login-page__item input_big" placeholder="Last name">
+        <div class="checkbox-flex">
+            <div class="registration-checkbox">
+                <input id="customerRadio" type="radio" name="clientType" class="login-page__item checkbox">
+                <label class="login-page__checkbox" for="customerRadio">Customer</label>
             </div>
-            <div class="registerCheckbox">
-                <input id="manufacturerRadio" type="radio" name="clientType" class="loginItem checkbox">
-                <label class="checkboxLabel" for="manufacturerRadio">Manufacturer</label>
+            <div class="registration-checkbox">
+                <input id="manufacturerRadio" type="radio" name="clientType" class="login-page__item checkbox">
+                <label class="login-page__checkbox" for="manufacturerRadio">Manufacturer</label>
             </div>
         </div>
-        <a class="loginItem button buttonUnpressed" href="register.html">Register</a>
+        <a class="login-page__item button button_unpressed" href="register.html">Register</a>
     </div>
 </div>
 </body>
