--- a/web/scientistsMain.html
+++ b/web/scientistsMain.html
@@ -8,10 +8,10 @@
     <title>MNU</title>
 </head>
 <body>
-<div class="scientistsGrid">
-    <div class="flexRow grid--empInfoNotifications">
-        <div class="empInfo"> Name Surname <br> Level: x</div>
-        <div class="empNotifications">
+<div class="scientists-grid">
+    <div class="flex-row employee-header">
+        <div class="employee-info"> Name Surname <br> Level: x</div>
+        <div class="employee-notifications">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="50px">
                 <path d="M 16 7
             a 5.38 5.38 0 0 0 -4.46 -4.85
@@ -36,9 +36,9 @@
             </svg>
         </div>
     </div>
-    <button class="grid--expButton gridButton button buttonPressed">Experiments</button>
-    <button class="grid--artButton gridButton button buttonUnpressed">Articles</button>
-    <a class="grid--addButton gridButton button buttonUnpressed">Add Experiment</a>
+    <button class="scientists-grid__experiments grid-button button button_pressed">Experiments</button>
+    <button class="scientists-grid__articles grid-button button button_unpressed">Articles</button>
+    <a class="scientists-grid__add grid-button button button_unpressed">Add Experiment</a>
 </div>
 </body>
 </html>
