--- a/web/shop.html
+++ b/web/shop.html
@@ -8,26 +8,26 @@
     <title>MNU</title>
 </head>
 <body style="margin: 7px 0">
-<div class="shopHeader">
-    <a class="feedbackButton" href="shop.html">Feedback</a>
-    <img alt="Feedback" class="shopIconButton mobileFeedbackButton" src="images/feedback.png">
-    <span class="shopHeaderFlexRow">You are logged in as ****
-            <img alt="Profile settings" class="shopIconButton" src="images/profile.png">
-            <img alt="History" class="shopIconButton" src="images/history.svg">
-            <img alt="Cart" class="shopIconButton" src="images/cart.png">
+<div class="shop-header">
+    <a class="feedback-button" href="shop.html">Feedback</a>
+    <img alt="Feedback" class="shop-icon feedback-button_mobile" src="images/feedback.png">
+    <span class="shop-header-flex-row">You are logged in as ****
+            <img alt="Profile settings" class="shop-icon" src="images/profile.png">
+            <img alt="History" class="shop-icon" src="images/history.svg">
+            <img alt="Cart" class="shop-icon" src="images/cart.png">
         </span>
 </div>
-<div class="shopGrid">
-    <div class="shopDepartmentsTitle flexColumn">
+<div class="shop-grid">
+    <div class="shop-grid__departments-title flex-column">
         Departments
     </div>
-    <div class="shopDepartments">
+    <div class="shop-grid__departments">
         <div></div>
     </div>
-    <div class="grid--shopSearch">
-        <input class="shopSearchBar bigInput" placeholder="Search..."
-        ><button class="shopSearchBarButton button buttonUnpressed">Go!</button>
-        <span class="shopSorter">Sort by: <select class="bigInput">
+    <div class="shop-grid__search-bar">
+        <input class="shop-grid__search-bar__input input_big" placeholder="Search..."
+        ><button class="shop-grid__search-bar_button button button_unpressed">Go!</button>
+        <span class="shop-grid__search-bar_sorter">Sort by: <select class="input_big">
             <option selected>Price (asc.)</option>
             <option>Price (desc.)</option>
             <option>???</option>
@@ -35,7 +35,7 @@
         </select>
         </span>
     </div>
-    <div class="shopCatalogue">
+    <div class="shop-grid__shop-catalogue">
     </div>
 </div>
 </body>
