--- a/web/managersMain.html
+++ b/web/managersMain.html
@@ -8,10 +8,10 @@
     <title>MNU</title>
 </head>
 <body>
-<div class="managersGrid">
-    <div class="flexRow grid--managerHeader">
-        <div class="empInfo"> Name Surname <br> Level: x</div>
-        <div class="empNotifications iconRow">
+<div class="managers-grid">
+    <div class="flex-row managers-grid__header">
+        <div class="employee-info"> Name Surname <br> Level: x</div>
+        <div class="employee-notifications icon-row">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="50px">
                 <path d="M 16 7
             a 5.38 5.38 0 0 0 -4.46 -4.85
@@ -34,20 +34,20 @@
                     <!-- x=11.8 for two-digit numbers -->
                 </g>
             </svg>
-            <img alt="Clients list" class="clientsListButton" src="images/human_list_icon.png">
-            <img alt="Prawns list" class="prawnsListButton" src="images/alien_list_icon.png">
+            <img alt="Clients list" class="managers-grid__client-list" src="images/human_list_icon.png">
+            <img alt="Prawns list" class="managers-grid__prawn-list" src="images/alien_list_icon.png">
         </div>
     </div>
-    <div class="grid--managerButtons flexColumn">
-        <a class="flexColumn grid--purchaseRequestButton gridButton button buttonUnpressed">Purchase
+    <div class="managers-grid__buttons flexColumn">
+        <a class="flex-column grid-button button button_unpressed">Purchase
             requests</a>
-        <a class="flexColumn grid--prawnRegisterButton gridButton button buttonUnpressed">Prawns
+        <a class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawns
             registrations</a>
-        <a class="flexColumn grid--synthConfWeaponsButton gridButton button buttonUnpressed">Synthesized
+        <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button button_unpressed">Synthesized
             & confiscated weapons</a>
-        <a class="flexColumn grid--prawnJobApplicationsButton gridButton button buttonUnpressed">Prawns'
+        <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button button_unpressed">Prawns'
             job applications</a>
-        <a class="flexColumn grid--equipChangeButton gridButton button buttonUnpressed">Equipment
+        <a class="flex-column grid-button button button_unpressed">Equipment
             change</a>
     </div>
 </div>
