--- a/web/securityMain.html
+++ b/web/securityMain.html
@@ -8,11 +8,11 @@
     <title>MNU</title>
 </head>
 <body>
-<div class="securityGrid">
-    <div class="empInfo grid--empInfoNotifications"> Name Surname <br> Level: x</div>
-    <div class="securityFlexRow grid--securityButtons">
-        <a class="changeButton gridButton button buttonUnpressed">Change <br> equipment</a>
-        <a class="reportButton gridButton button buttonUnpressed">Report on <br> a confiscated weapon</a>
+<div class="security-grid">
+    <div class="employee-info security-grid__header"> Name Surname <br> Level: x</div>
+    <div class="security-flex-row security-grid__security-buttons">
+        <a class="security-buttons__change grid-button button button_unpressed">Change <br> equipment</a>
+        <a class="security-buttons_report grid-button button button_unpressed">Report on <br> a confiscated weapon</a>
     </div>
 </div>
 </body>
