admin employees mobile

--- a/web/administratorsMenu.html
+++ b/web/administratorsMenu.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="css/administrator.css">
+    <link rel="stylesheet" type="text/css" href="css/administratorMenu.css">
     <title>MNU</title>
 </head>
 <body>
@@ -37,13 +37,20 @@
         </div>
     </div>
     <a class="flex-column administrators-menu-grid__district grid-button button button_unpressed">District</a>
-    <a class="flex-column administrators-menu-grid__experiments-articles grid-button button button_unpressed">Experiments & Articles</a>
-    <a class="flex-column administrators-menu-grid__clients-manufacturers grid-button button button_unpressed">Clients & Manufacturers</a>
-    <a class="flex-column administrators-menu-grid__employees grid-button button button_unpressed">Employees</a>
-    <a class="flex-column administrators-menu-grid__prawn-vacancies grid-button button button_unpressed">Prawn vacancies</a>
-    <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button button_unpressed">Synthesized & confiscated weapons</a>
-    <a class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawn registration</a>
-    <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button button_unpressed">Prawns' job applications</a>
+    <a class="flex-column administrators-menu-grid__experiments-articles grid-button button button_unpressed">Experiments
+        & Articles</a>
+    <a class="flex-column administrators-menu-grid__clients-manufacturers grid-button button button_unpressed">Clients &
+        Manufacturers</a>
+    <a href="administratorsEmployees.html"
+       class="flex-column administrators-menu-grid__employees grid-button button button_unpressed">Employees</a>
+    <a class="flex-column administrators-menu-grid__prawn-vacancies grid-button button button_unpressed">Prawn
+        vacancies</a>
+    <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button button_unpressed">Synthesized
+        & confiscated weapons</a>
+    <a class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawn
+        registration</a>
+    <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button button_unpressed">Prawns'
+        job applications</a>
 </div>
 </body>
 </html>
