--- a/web/administratorsEmployees.html
+++ b/web/administratorsEmployees.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="css/administrator.css">
+    <link rel="stylesheet" type="text/css" href="css/administratorEmployees.css">
     <title>MNU</title>
 </head>
 <body>
 <div class="admin-employees-grid">
     <div class="flex-row admin-header">
-        <img alt="back" src="images/back.png" class="icon back-button round-button button_unpressed">
+        <a href="administratorsMenu.html">
+            <img alt="back" src="images/back.png" class="icon back-button round-button button_unpressed">
+        </a>
         <div class="employee-info"> Name Surname <br> Level: x</div>
         <div class="employee-notifications">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="50px">
@@ -37,7 +39,7 @@
             </svg>
         </div>
     </div>
-    <div class="admin-employees-grid__table">
+    <div class="admin-employees-grid__table flex-column">
         <table>
             <thead>
             <tr>
@@ -66,37 +68,36 @@
             </tbody>
         </table>
     </div>
-    <div class="admin-employees-grid__buttons">
+    <div class="admin-employees-grid__buttons flex-column">
         <img alt="Add employee" id="add-button" class="button_pressed round-button icon" src="images/plus.png">
         <img alt="Edit employees" id="edit-button" class="button_unpressed round-button icon" src="images/edit.svg">
-        <img alt="Find employees" id="find-button" class="button_unpressed round-button icon" src="images/magnifier.svg">
+        <img alt="Find employees" id="find-button" class="button_unpressed round-button icon"
+             src="images/magnifier.svg">
         <img alt="Cash Rewards" id="reward-button" class="button_unpressed round-button icon" src="images/dollar.png">
     </div>
-    <div class="admin-employees-grid__inputs">
-        <div class="admin-employees-grid__inputs_add add-employees-inputs-grid">
+    <div class="admin-employees-grid__inputs flex-column">
+        <div class="admin-employees-grid__inputs_add add-employees-inputs-grid flex-column">
             <input class="add-employees-inputs-grid__name" placeholder="Name">
             <input class="add-employees-inputs-grid__lvl" placeholder="Lvl">
             <input class="add-employees-inputs-grid__salary" placeholder="Salary">
             <input class="add-employees-inputs-grid__position" placeholder="Position">
-            <div class="add-employees-inputs-grid__type">
-                Type:
-                <label>
-                    <input type="radio" name="employee-type">
+            <select class="add-employees-inputs-grid__type">
+                <option disabled selected hidden>
+                    Type
+                </option>
+                <option>
                     Security
-                </label>
-                <label>
-                    <input type="radio" name="employee-type">
+                </option>
+                <option>
                     Scientist
-                </label>
-                <label>
-                    <input type="radio" name="employee-type">
+                </option>
+                <option>
                     Manager
-                </label>
-                <label>
-                    <input type="radio" name="employee-type">
+                </option>
+                <option>
                     Administrator
-                </label>
-            </div>
+                </option>
+            </select>
             <button class="button button_unpressed add-employees-inputs-grid__button">Add employee</button>
         </div>
         <div class="admin-employees-grid__inputs_edit">
