--- a/web/securityMain.html
+++ b/web/securityMain.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="css/security.css">
+    <link rel="stylesheet" type="text/css" href="css/securityMain.css">
     <title>MNU</title>
 </head>
 <body>
