prawn registration (very lazy)

--- a/web/managersMenu.html
+++ b/web/managersMenu.html
@@ -39,9 +39,9 @@
         </div>
     </div>
     <div class="managers-grid__buttons flexColumn">
-        <a class="flex-column grid-button button button_unpressed">Purchase
-            requests</a>
-        <a class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawns
+        <a class="flex-column grid-button button button_unpressed">Purchase requests</a>
+        <a href="prawnRegistration.html"
+           class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawns
             registrations</a>
         <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button button_unpressed">Synthesized
             & confiscated weapons</a>
