--- a/web/register.html
+++ b/web/register.html
@@ -15,8 +15,7 @@
         <input type="password" class="login-page__item input_big" placeholder="Password">
         <input type="password" class="login-page__item input_big" placeholder="Confirm password">
         <input type="email" class="login-page__item input_big" placeholder="Email">
-        <input class="login-page__item input_big" placeholder="First name">
-        <input class="login-page__item input_big" placeholder="Last name">
+        <input class="login-page__item input_big" placeholder="Name">
         <div class="checkbox-flex">
             <div class="registration-checkbox">
                 <input id="customerRadio" type="radio" name="clientType" class="login-page__item checkbox">
