--- a/web/administratorsMenu.html
+++ b/web/administratorsMenu.html
@@ -39,15 +39,14 @@
     <a class="flex-column administrators-menu-grid__district grid-button button button_unpressed">District</a>
     <a class="flex-column administrators-menu-grid__experiments-articles grid-button button button_unpressed">Experiments
         & Articles</a>
-    <a class="flex-column administrators-menu-grid__clients-manufacturers grid-button button button_unpressed">Clients &
-        Manufacturers</a>
+    <a class="flex-column administrators-menu-grid__clients-manufacturers grid-button button button_unpressed">Purchase & sale requests</a>
     <a href="administratorsEmployees.html"
        class="flex-column administrators-menu-grid__employees grid-button button button_unpressed">Employees</a>
     <a class="flex-column administrators-menu-grid__prawn-vacancies grid-button button button_unpressed">Prawn
         vacancies</a>
     <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button button_unpressed">Synthesized
         & confiscated weapons</a>
-    <a class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawn
+    <a href="prawnRegistration.html" class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawn
         registration</a>
     <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button button_unpressed">Prawns'
         job applications</a>
