project: remove dobs & genders, reuse auth logic from 4th lab assignment
reverted some of unnecessary commits & shop page done

--- a/web/shop.html
+++ b/web/shop.html
@@ -24,8 +24,10 @@
         <div></div>
     </div>
     <div class="shop-grid__search-bar">
-        <input class="shop-grid__search-bar_input input_big" placeholder="Search..."
-        ><button class="shop-grid__search-bar_button button button_unpressed">Go!</button>
+        <span>
+            <input class="shop-grid__search-bar_input input_big" placeholder="Search..."
+            ><button class="shop-grid__search-bar_button button button_unpressed">Go!</button>
+        </span>
         <span class="shop-grid__search-bar_sorter">Sort by: <select class="input_big">
             <option selected>Price (asc.)</option>
             <option>Price (desc.)</option>
@@ -39,7 +41,7 @@
     <img alt="departments" class="shop-icon burger" src="images/burger.png">
     <div class="flex-column department-title">Light weapons</div>
 </div>
-<div class="shop-header_mobile">
+<div class="shop-mobile-footer">
     <img alt="Profile settings" class="shop-icon profile_mobile" src="images/profile.png">
     <img alt="History" class="shop-icon history_mobile" src="images/history.svg">
     <img alt="Cart" class="shop-icon cart_mobile" src="images/cart.png">
