--- a/web/scientistsMain.html
+++ b/web/scientistsMain.html
@@ -38,7 +38,7 @@
     </div>
     <button class="scientists-grid__experiments grid-button button button_pressed">Experiments</button>
     <button class="scientists-grid__articles grid-button button button_unpressed">Articles</button>
-    <a class="scientists-grid__add grid-button button button_unpressed">Add Experiment</a>
+    <a href="scientistsNewExperiment.html" class="scientists-grid__add grid-button button button_unpressed">Add Experiment</a>
 </div>
 </body>
 </html>
