--- a/web/shop.html
+++ b/web/shop.html
@@ -25,7 +25,7 @@
     </div>
     <div class="shop-grid__search-bar">
         <span>
-            <input class="shop-grid__search-bar_input input_big" placeholder="Search..."
+            <input type="search" class="shop-grid__search-bar_input input_big" placeholder="Search..."
             ><button class="shop-grid__search-bar_button button button_unpressed">Go!</button>
         </span>
         <span class="shop-grid__search-bar_sorter">Sort by: <select class="input_big">
